--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 						<h2></h2>
 						
 					</header>
-					<div>
+					<div style="color:white">
 						<div class="row">
 							<div class="12u">
 								<form method="post" action="#">
