--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@ ul.social li a:before {
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-                                    <span><img src="images/inter.jpg" alt="" style="width:80px;" /></span>
+                                    <span><img src="inter.jpg" alt="" style="width:80px;" /></span>
 									<h3>Interview Scheduling Management System</h3>
 									<p>
                             ISMS  is a system used for managing the job interviews of registered candidates in online.
@@ -2411,8 +2411,9 @@ ul.social li a:before {
 
                                     <h3>EDUCATIONAL QUALIFICATION</h3>
 
-                                    <table style="border: 1px solid black;">
-                                        <tr style="border: 1px solid black;">
+                                    
+                                    <table style="border: 1px solid red;">
+                                        <tr style="border: 1px solid red;">
                                             <th>
                                                 DEGREE/
                                                 COURSE
