--- a/index.html
+++ b/index.html
@@ -2519,16 +2519,17 @@ ul.social li a:before {
 						<div class="row">
 							<div class="12u">
 								<hr />
-								<h3>Find me on ...</h3>
+								<h3>Mail Me On...</h3>
 								<ul class="social">
+									<p>dharaniifet@gmail.com</p>
+									<h3>Ring Me On</h3>
+									<p>9843795993</h3>
 									<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>-->
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                                    <li><a href="#" class="icon fa-skype"><span class="label">Skype</span></a></li>
+									
 									<!--<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
 									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
@@ -2544,11 +2545,7 @@ ul.social li a:before {
 							</div>
 						</div>
 					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					
 				</article>
 			</div>
 
