--- a/index.html
+++ b/index.html
@@ -2427,7 +2427,7 @@ ul.social li a:before {
                                             <th>YEAR OF PASSING</th>
                                             <th>MARKS</th>
                                         </tr>
-                                        <tr>
+                                        <tr style="border: 1px solid red;>
                                             <td>
                                                 B.E
                                                 (Computer Science and Engineering)
@@ -2437,7 +2437,7 @@ ul.social li a:before {
                                             <td>2016</td>
                                             <td>8.41</td>
                                         </tr>
-                                        <tr>
+                                        <tr style="border: 1px solid red;>
                                             <td>Higher Secondary</td>
                                             <td>Ramakrishna Vidayalaya Matric Higher secondary School,Villupuram.</td>
                                             <td>Tamil Nadu State Board</td>
@@ -2445,7 +2445,7 @@ ul.social li a:before {
                                             <td>75.9%</td>
 
                                         </tr>
-                                        <tr>
+                                        <tr style="border: 1px solid red;>
                                             <td>
                                                 S.S.L.C
                                             </td>
