--- a/index.html
+++ b/index.html
@@ -2234,7 +2234,7 @@ ul.social li a:before {
 							</header>
                             <h3>FULL STACK DEVELOPER</h3>
 							<p>Most developers tend to focus on either the front-end, the dynamic interactive portion of a website that everyone is familiar with, or the back-end the data-driven server-side of an application that powers site functionality from behind the scenes. A full stack web developer is a jack of all trades who can do both reasonably well enough to carry your project all the way from conception to completion.
-							<a href="#work" class="button big scrolly" style="top:10px;">Learn about what I do</a>
+							<a href="#work" class="button " style="top:10px;">Learn about what I do</a>
 						</div>
 					</div>
 				</article>
@@ -2244,6 +2244,8 @@ ul.social li a:before {
 			<div class="wrapper style2">
 				<article id="work">
 					<header>
+						<br/>
+						<br/>
 						<h2>Currently at  Cognizant Technology and Solutions</h2>
 						<p>Projects Worked</p>
 					</header>
@@ -2285,6 +2287,8 @@ ul.social li a:before {
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
+						<br/>
+						<br/>
 						<h2>Here’s some stuff I learned recently.</h2>
 						<p></p>
 					</header>
