--- a/index.html
+++ b/index.html
@@ -2441,7 +2441,7 @@ ul.social li a:before {
                                             <td>2016</td>
                                             <td>8.41</td>
                                         </tr>
-                                        <tr>
+                                        <tr style="border: 1px solid red;>
                                             <td>Higher Secondary</td>
                                             <td>Ramakrishna Vidayalaya Matric Higher secondary School,Villupuram.</td>
                                             <td>Tamil Nadu State Board</td>
