--- a/index.html
+++ b/index.html
@@ -2226,7 +2226,7 @@ ul.social li a:before {
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="jk.jpeg" alt="" /></span>
+							<span class="image fit"><img src="dharani.JPG" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
