--- a/index.html
+++ b/index.html
@@ -2501,7 +2501,7 @@ ul.social li a:before {
                                         INDUSTRIAL EXPOSURE
                                     </h3>
                                     <ul>
-                                        <li>ndustrial Visit to FOCUS, Kerala.</li>
+                                        <li>Industrial Visit to FOCUS, Kerala.</li>
                                         <li>Underwent an inplant training at Quad Softwares. </li>
                                         <li>
                                             Underwent an inplant training at UNIQ technologies.
